--- a/packages/package.yaml.template
+++ b/packages/package.yaml.template
@@ -6,7 +6,7 @@
 #   @url            :   
 ###############################################################################
 homeassistant:
-
+  customize:
 
 group:
 
