--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -22,6 +22,9 @@ base_url: https://0.0.0.0
 ide_url: https://0.0.0.0
 terminal_url: http://0.0.0.0
 
+secure_zwave_key: "0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10"
+
+nmap_hosts: 0.0.0.0/24
 
 xiaomi_vacuum_ip: 0.0.0.0
 xiaomi_vacuum_token: 30077ed49c58a7239561b0a315338f74
