--- a/includes/group.yaml
+++ b/includes/group.yaml
@@ -60,6 +60,7 @@ info_view:
 # Groups
 family:
   name: Family
+  control: hidden
   entities:
     - device_tracker.trents_galaxy
     - device_tracker.rachels_iphone
@@ -72,6 +73,7 @@ scripts:
     - script.stop_air_conditioner
 cameras:
   name: Cameras
+  control: hidden
   entities:
     - camera.front_door
     - camera.back_door
@@ -92,6 +94,7 @@ switches:
     - switch.outside_heater
 infolinks:
   name: Links
+  control: hidden
   entities:
     - weblink.router
     - weblink.synology
@@ -146,6 +149,7 @@ multisensor:
     - sensor.humidity_158d0001a2e878
 doorandwindowsensors:
   name: Door and Window Sensors
+  control: hidden
   entities:
     - binary_sensor.door_window_sensor_158d00019f3211
     - binary_sensor.door_window_sensor_158d000186f0ec
