--- a/includes/script.yaml
+++ b/includes/script.yaml
@@ -13,9 +13,6 @@ good_night:
     - service: switch.turn_off
       data:
         entity_id: group.lamps
-    - service: switch.turn_off
-      data:
-        entity_id: input_boolean.ifttt_office_lamp
     - service: media_player.turn_off
       data:
         entity_id: media_player.living_room_home
@@ -34,6 +31,9 @@ good_night:
     - service: remote.turn_off
       data:
         entity_id: remote.living_room
+    - service: lock.lock
+      data:
+        entity_id: lock.front_door
 start_air_conditioner:
   sequence:
     - service: input_select.select_option
@@ -58,47 +58,3 @@ stop_air_conditioner:
       data:
         entity_id: input_select.ac_operation_mode
         option: Power Off
-# Script to send notifications to the ChromeCast Audios during normal hours and only when we are home! Call like this:
-  # action:
-    # service: script.speech_processing
-    # data_template:
-    #   speech_message:
-# Original Repo : https://github.com/CCOSTAN/Home-AssistantConfig
-
-speech_processing:
-  sequence:
-    - service: mqtt.publish
-      data_template:
-        topic: 'broadcast/lastmsg'
-        payload: 'This Message is from {{now().strftime("%I")}}:{{now().strftime("%M")}} {{now().strftime("%p")}}. {{speech_message}}'
-        retain: true
-
-    - condition: and
-      conditions:
-        - condition: or
-          conditions:
-            - condition: state
-              entity_id: group.family
-              state: 'home'
-            - condition: state
-              entity_id: input_boolean.guest_mode
-              state: 'on'
-        - condition: or
-          conditions:
-            - condition: time
-              after: '08:00:00'
-              before: '20:00:00'
-            - condition: state
-              entity_id: input_boolean.alert_mode
-              state: 'on'
-        - condition: state
-          entity_id: input_boolean.speech_notifications
-          state: 'on'
-
-    - service: notify.google_assistant_broadcast
-      data_template:
-        message: '{{speech_message}}'
-    - service: input_boolean.turn_off
-      entity_id:
-        - input_boolean.alert_mode
-        - input_boolean.lastmsg
