--- a/packages/network_sensors.yaml
+++ b/packages/network_sensors.yaml
@@ -40,6 +40,7 @@ homeassistant:
 group:
   network:
     name: Network
+    control: hidden
     entities:
       - sensor.speedtest_ping
       - sensor.speedtest_download
