--- a/packages/ups.yaml
+++ b/packages/ups.yaml
@@ -15,6 +15,7 @@ homeassistant:
 group:
   ups:
     name: "UPS"
+    control: hidden
     entities:
       - sensor.ups_status
       - sensor.ups_load
