--- a/packages/washing_machine.yaml
+++ b/packages/washing_machine.yaml
@@ -17,6 +17,7 @@ homeassistant:
 group:
   washing_machine:
     name: "Washing Machine"
+    control: hidden
     entities:
       - sensor.washing_machine_status
       - switch.plug_158d0001debe7a
