--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@
 *.pem
 *.old
 location.txt
-www
 mqttssl
 appdaemon/*.log*
+www/*.png
+www/custom_ui/floorplan/lib/
+www/harmony/
 appdaemon/compiled
 OZW_Log.txt
 home-assistant.log
