--- a/appdaemon/dashboards/bottom_panel_floorplan.yaml
+++ b/appdaemon/dashboards/bottom_panel_floorplan.yaml
@@ -3,35 +3,52 @@ load_main_panel:
     title: Main Panel
     icon_inactive: fa-home
     dashboard: MainPanel
+    icon_inactive_style: "font-size: 350%"
+    icon_active_style: "font-size: 400%"
+    title_style: "font-size: 160%"
 
 load_security_panel:
     widget_type: navigate
     title: Security Panel
     icon_inactive: fa-shield
     dashboard: SecurityPanel
+    icon_inactive_style: "font-size: 350%"
+    icon_active_style: "font-size: 400%"
+    title_style: "font-size: 160%"
 
 load_weather_panel:
     widget_type: navigate
     title: Weather
     icon_inactive: fa-cloud
     dashboard: WeatherPanel
+    icon_inactive_style: "font-size: 350%"
+    icon_active_style: "font-size: 400%"
+    title_style: "font-size: 160%"
 
 load_controls:
     widget_type: navigate
     title: Controls
     icon_inactive: fa-dashboard
     dashboard: Controls
+    icon_inactive_style: "font-size: 350%"
+    icon_active_style: "font-size: 400%"
+    title_style: "font-size: 160%"
 
 load_floorplan:
     widget_type: navigate
     title: Floorplan
     icon_inactive: fa-map-marker
-    icon_inactive_style: "color: $blue"
     dashboard: Floorplan
+    icon_inactive_style: "color: $blue; font-size: 350%"
+    icon_active_style: "font-size: 400%"
+    title_style: "font-size: 160%"
     
 reload:
     widget_type: reload
     title: Reload
+    icon_inactive_style: "font-size: 350%"
+    icon_active_style: "font-size: 400%"
+    title_style: "font-size: 160%"
     
 layout: 
     - load_main_panel(2x1), load_security_panel(2x1), load_weather_panel(2x1), load_floorplan(1x1), reload
