--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -49,6 +49,10 @@ api_password: fakepassword
 darksky_api: 123456789
 openweathermap_api: 123456789
 
+fkiosk_rest: http://0.0.0.0:0000/?cmd=deviceInfo&type=json&password=password
+fkiosk_screen_on: "/usr/bin/curl -X POST 'http://0.0.0.0:0000/?cmd=screenOn&type=json&password=password'"
+fkiosk_screen_off: "/usr/bin/curl -X POST 'http://0.0.0.0:0000/?cmd=screenOff&type=json&password=password'"
+fkiosk_screen_state: '/usr/bin/curl --silent -X GET "http://0.0.0.0:0000/?password=password" |grep "Screen status" |grep "on\|off" |sed "s/<[^>]*>//g" |sed "s/Screen status//g" |sed "s/Turn on//g" |sed "s/Turn off//g"'
 
 html5_gcm_api: 123456789
 html5_gcm_sender: 123456789
