--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -19,6 +19,8 @@ nzbget_password: fakepassword
 hassbian_ip: 0.0.0.0
 base_url: https://0.0.0.0
 
+influxdb_host: 0.0.0.0
+
 ide_url: https://0.0.0.0
 terminal_url: http://0.0.0.0
 
