Added Broadlink RF Fan Control, Added Dark Dashboard

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -120,11 +120,12 @@ recorder:
   purge_interval: 2
   purge_keep_days: 14
 
-# Media Player
-media_player:
-  - platform: spotify
-    client_id: !secret spotify_client_id
-    client_secret: !secret spotify_client_secret
+# Media Player - Spotify, no longer used.
+
+# media_player:
+#   - platform: spotify
+#     client_id: !secret spotify_client_id
+#     client_secret: !secret spotify_client_secret
 
 # Camera (Synology)
 camera:
