--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -36,6 +36,7 @@ broadlink_sw2_ip: 0.0.0.0
 broadlink_sw3_ip: 0.0.0.0
 broadlink_sw4_ip: 0.0.0.0
 broadlink_rm1_ip: 0.0.0.0
+broadlink_rm2_pro_plus: 0.0.0.0
 
 harmony_ip: 0.0.0.0
 harmony_name: fakename
