--- a/includes/switch.yaml
+++ b/includes/switch.yaml
@@ -72,6 +72,14 @@
       turn_off:
         service: script.turn_on
         entity_id: script.stop_air_conditioner
+    fan:
+      value_template: "{{ is_state('input_select.fan_operation_mode', 'Forward') }}"
+      turn_on:
+        service: script.turn_on
+        entity_id: script.start_fan
+      turn_off:
+        service: script.turn_on
+        entity_id: script.stop_fan
 
 # Test NZBGet Switch
 - platform: nzbget
