--- a/appdaemon/custom_css/dark1/variables.yaml
+++ b/appdaemon/custom_css/dark1/variables.yaml
@@ -147,8 +147,9 @@ input_boolean_state_text_style: "color: $gray_medium_dark"
 
 switch_icon_on: fa-circle
 switch_icon_off: fa-circle-thin
-switch_icon_style_active: $style_active
-switch_icon_style_inactive: "$style_inactive; color: antiquewhite"  
+switch_icon_style_active: $style_active 
+switch_icon_style_inactive: "color: $gray_medium_dark"
+# switch_icon_style_inactive: "$style_inactive; color: antiquewhite"  
 switch_title_style: $style_title
 switch_title2_style: $style_title2
 switch_widget_style: $background_style
@@ -172,9 +173,13 @@ cover_title2_style: $style_title2
 cover_widget_style: $background_style
 cover_state_text_style: "font-weight: 400; color: $gray_medium_dark"
 
-clock_date_style: "visibility: hidden; height: 0px;"
-clock_time_style: "color: #fff; font-size: 150%;"
-clock_widget_style: "background-color: transparent;"
+clock_date_style: "color: $gray_medium_dark; font-size: 180%"
+clock_time_style: "color: #fff; font-size: 150%"
+clock_widget_style: $background_style
+
+# clock_date_style: "visibility: hidden; height: 0px;"
+# clock_time_style: "color: #fff; font-size: 150%;"
+# clock_widget_style: "background-color: transparent;"
 
 alarm_title_style: $style_title
 alarm_title2_style: $style_title2
