--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -18,24 +18,6 @@ binary_sensor.switch_158d00016449a2:
   friendly_name: Spare Switch
 binary_sensor.switch_158d0001a21086:
   friendly_name: Bedroom Switch
-binary_sensor.door_window_sensor_158d000186f0ec:
-  friendly_name: Back Door Sensor
-  icon: mdi:door
-binary_sensor.door_window_sensor_158d00019f3211:
-  friendly_name: Front Door Sensor
-  icon: mdi:door
-binary_sensor.door_window_sensor_158d0001d7acfc:
-  friendly_name: Bedroom Window Sensor
-  icon: mdi:window-closed
-binary_sensor.door_window_sensor_158d0001e037dc:
-  friendly_name: Living Room Window Sensor 1
-  icon: mdi:window-closed
-binary_sensor.door_window_sensor_158d00019fbe38:
-  friendly_name: Living Room Window Sensor 2
-  icon: mdi:window-closed
-binary_sensor.door_window_sensor_158d0001a4a872:
-  friendly_name: Living Room Window Sensor 3
-  icon: mdi:window-closed
 binary_sensor.motion_sensor_158d000165627b:
   friendly_name: Hallway Motion
 sensor.fibaro_system_fgms001zw5_motion_sensor_temperature:
@@ -61,9 +43,18 @@ script.start_air_conditioner:
 script.stop_air_conditioner:
   friendly_name: Stop Air Conditioner
   icon: mdi:air-conditioner
+script.start_fan:
+  friendly_name: Start Fan
+  icon: mdi:fan
+script.stop_fan:
+  friendly_name: Stop Fan
+  icon: mdi:fan
 switch.air_conditioner:
   friendly_name: Air Conditioner
   icon: mdi:air-conditioner
+switch.fan:
+  friendly_name: Fan
+  icon: mdi:fan
 switch.living_room_lamp:
   icon: mdi:lamp
 light.trent_bedside:
